# RGB_Event_Camera_Setup

./: .gitignore  LICENSE  README.md
docs/: calibration.md  index.md  installation.md  ros-workspace.md  troubleshooting.md
src/rgb_event_camera_system/: CMakeLists.txt  package.xml
src/rgb_event_camera_system/launch/: RGB_event_cam_stereo.launch  record.launch  vicon.launch
src/rgb_event_camera_system/rviz/: wp1.rviz
src/rgb_event_camera_system/scripts/: export_bag_video.sh  export_bag_videos.py  extract_bag.py  extract_rgb_img_from_bag.py  preview_exposure.sh  preview_jetson.sh  record.sh  record_docker.sh  visualize_bag.sh
